@@ -1,3 +1,9 @@
+2011-10-06  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/*.d*: Remove CDDL.
+	* uts/common/sys/*.h (installed only): Likewise.
+	* dtrace.spec: Likewise.
+
 2011-10-05  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Add --use-installed option, to use a dtrace
